IMP: serve EWMRS renders as single files
